[project]
name = "grimpfunc"
version = "0.1.0"
authors = [{name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com"},
            {name = "Ian Joughin"}]
requires-python = ">= 3.11"
dependencies = [
"geopandas<2",
"holoviews<2",
"hvplot<0.13",
"matplotlib<4",
"panel<2",
"requests<3",
"rioxarray<1",
"rio-stac<1",
"stackstac<1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
grimpfunc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
geopandas = "*"
holoviews = "*"
hvplot = "*"
matplotlib-base = "*"
panel = "*"
requests = "*"
rio-stac = "*"
rioxarray = "*"
stackstac = "*"
