[project]
name = "grimpfunc"
description = "Utility classes and functions to work with GrIMP data hosted by NASA NSIDC."
version = "0.1.0"
authors = [
    { name = "Ian Joughin" },
    { name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com" }
]
requires-python = ">= 3.11"

dependencies = [
    "dask",
    "geopandas",
    "holoviews",
    "hvplot",
    "matplotlib",
    "panel",
    "requests",
    "rioxarray",
]

[project.urls]
repository = "https://github.com/fastice/grimpfunc.git"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
grimpfunc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
dask = "*"
geopandas = "*"
holoviews = "*"
hvplot = "*"
matplotlib-base = "*"
panel = "*"
requests = "*"
rioxarray = "*"

[tool.pixi.package]
name = "grimpfunc"
version = "0.1.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "==0.3.2"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
dask = "*"
geopandas = "*"
holoviews = "*"
hvplot = "*"
matplotlib-base = "*"
panel = "*"
requests = "*"
rioxarray = "*"
